--- a/game/templates/equipment-all.html
+++ b/game/templates/equipment-all.html
@@ -1,8 +1,7 @@
 {% extends "game.html" %}
 
 {% block main %}
-    <div class='index'>
-        <h2>Equipment Area</h2>
-        <p>Look at the status on your equipment.  Make repairs, swap items, perform upgrades.</p>
+    <div class='Index'>
+        <div class='NI'>Not yet implemented</div>
     </div>
 {% endblock %}
