--- a/game/static/css/styles.css
+++ b/game/static/css/styles.css
@@ -19,6 +19,11 @@ body {
     position: relative;
 }
 
+.NI {
+    color: white;
+    font-weight: bold;
+}
+
 
 /* Authentication Views */
 
@@ -112,12 +117,15 @@ header.Banner {
     border-bottom: 2px solid black;
 }
 
+header.Banner > a{
+    text-decoration: none;
+}
+
 h1.BannerText {
     font-size: 2rem;
     font-weight: bold;
     text-transform: uppercase;
     color: white;
-    cursor: pointer;
     text-shadow: 0 0 8px rgb(211,211,211);
 }
 
@@ -335,29 +343,43 @@ div.MechCardEquipment > div {
 }
 
 div.MechCardItem {
+    display: none;
     width: 220px;
-    height: 250px;
-    border: 1px solid black;
+    border: 2px solid black;
+    border-radius: 1rem;
+    line-height: 1.125;
     margin-left: 1rem;
     padding: 1rem;
 }
 
 div.MechCardStats {
     display: none;
+    flex-direction: column;
     align-content: center;
     justify-content: center;
     background-color: rgba(211,211,211, 0.6);
     border-radius: 0.5rem;
-    width: 550px;
-    height: 360px;
+    padding: 1rem;
     margin: auto;
 }
 
-div.MechCardStats > div {
-    display: flex;
-    flex-direction: column;
-    align-self: center;
+div.MechCardStats > table {
+    table-layout: fixed;
 }
+
+div.MechCardStats > table > tbody > tr > * {
+    width: 100px;
+    padding: 0.5rem;
+}
+
+div.MechCardStats > table > tbody > tr > th {
+    text-align: left;
+}
+
+div.MechCardStats > table > tbody > tr > td {
+    text-align: right;
+}
+
 
 /* Deployment */
 
@@ -388,8 +410,6 @@ div#view {
 div.DeployedCardImage {
     width: 150px;
     height: 150px;
-    border-radius: 1rem;
-    background-color: white;
     margin: 1rem;
     flex-shrink: 0;
 }
@@ -422,13 +442,26 @@ p.DeployedCardText {
 }
 
 div.Arena {
-    display: flex;
-    flex: 0;
+    display: none;
+    justify-content: space-between;
+    padding: 2rem;
+    width: 100%;
+}
+
+div.Stats > img {
+    height: 100px;
+    width: 100px;
+}
+
+div.Stats > p {
+    text-align: center;
+    font-weight: bold;
+    letter-spacing: 1px;
+    color: red;
 }
 
 div.Loot {
-    display: flex;
-    flex: 0;
+    display: none;
 }
 
 div.DeployedCardButtonGroup {
@@ -447,6 +480,3 @@ div.ActionButtons > button + button {
     margin-left: 0.25rem;
 }
 
-button#exit {
-    float: right;
-}
