--- a/game/templates/store.html
+++ b/game/templates/store.html
@@ -1,8 +1,7 @@
 {% extends "game.html" %}
 
 {% block main %}
-    <div class='index'>
-        <h2>Store</h2>
-        <p>This is where you buy and sell equipment.</p>
+    <div class='Index'>
+        <div class='NI'>Not yet implemented</div>
     </div>
 {% endblock %}
