--- a/game/templates/workshop.html
+++ b/game/templates/workshop.html
@@ -59,7 +59,7 @@
                     <tbody>
                         <tr>
                             <th>Health:</th>
-                            <td>{{mech.current_hp}} / {{mech.max_hp}}</td>
+                            <td><span id='health'>{{mech.current_hp}}</span> / {{mech.max_hp}} <span id='healbutton'>Restore</span></td>
                         </tr>
                         <tr>
                             <th>Armor:</th>
