--- a/game/templates/base_generic.html
+++ b/game/templates/base_generic.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  {% block title %}<title>Callisto</title>{% endblock %}
+  <title>{% block title %}Welcome to Callisto{% endblock %}</title>
 
   <meta name="description" content="description">
   <meta name="author" content="author">
