--- a/game/templates/base_generic.html
+++ b/game/templates/base_generic.html
@@ -13,6 +13,7 @@
 {% load static %}
 <link rel="stylesheet" href="{% static 'css/reset.css' %}">
 <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+<link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}"/>
 
 
 </head>
