modified logic behind attack rounds. api now calls attack and flips curr and next player, as well as returns a consistent object interface for informing js frontend of what is going on. js front end is now fully responsible for deciding which options to provide based on what has happened i.e. getting rid of fire button on battle end, providing loot button, etc.

--- a/game/templates/workshop.html
+++ b/game/templates/workshop.html
@@ -89,5 +89,5 @@
         {% endif %}
     </div>
     
-    <script src='/static/js/workshopController.js'></script>
+    <script src='/static/js/workshopController.js' defer></script>
 {% endblock %}
