--- a/game/templates/deploy.html
+++ b/game/templates/deploy.html
@@ -46,5 +46,5 @@
         </div>
     </div>
 
-    <script src="{% static 'js/deploymentController.js' %}"></script>
+    <script src="{% static 'js/deploymentController.js' %}" defer></script>
 {% endblock %}
